Start work on cleaning everything up